modify batch size

--- a/1123_final_final.ipynb
+++ b/1123_final_final.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "9322db92-e1ac-4c82-9f7c-86d7f9b75943",
    "metadata": {
     "tags": []
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eb0d2e6f1b340ef897f52ea49f3c3aa",
+       "model_id": "89377d5c4e5f4084a966598e12ba5dd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2949ac9c010c42f89ee1176960243973",
+       "model_id": "8fd94b1ddd044fba87ed5d6a8f15a143",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cd68d0f9f4e4962a379972e70b898e1",
+       "model_id": "e09d5fd3b3e7436b8ccd15e7dcb9da43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2d03d8e7-778d-4d0f-b6d2-d5c940a71b35",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d8c02d15",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "61d8796e",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
     "        BIO_f = torch.eye(POS_len+1)[BIO]\n",
     "        \n",
     "        sequence_output = torch.cat((sequence_output,POS_f, BIO_f),2)\n",
-    "        print(sequence_output.size())\n",
+    "        #print(sequence_output.size())\n",
     "        logits = self.classifier(sequence_output[:,:,:].view(-1, feature_dim)) # calculate losses\n",
     "        self.logits = logits\n",
     "        \n",
@@ -332,7 +332,23 @@
    "execution_count": null,
    "id": "0a0c4d12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n",
+      "  0%|                                                  | 0/3948 [00:00<?, ?it/s]\n",
+      "  0%|                                                   | 0/153 [00:00<?, ?it/s]\u001b[AYou're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
+      "  0%|                                        | 2/3948 [00:05<2:55:48,  2.67s/it]\n",
+      "  1%|▎                                      | 28/3948 [01:14<2:54:22,  2.67s/it]\u001b[A"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from tqdm import tqdm\n",
