--- a/1123_final_final.ipynb
+++ b/1123_final_final.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0a0c4d12",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,82 @@
       "  0%|                                                  | 0/3948 [00:00<?, ?it/s]\n",
       "  0%|                                                   | 0/153 [00:00<?, ?it/s]\u001b[AYou're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
       "  0%|                                        | 2/3948 [00:05<2:55:48,  2.67s/it]\n",
-      "  1%|▎                                      | 28/3948 [01:14<2:54:22,  2.67s/it]\u001b[A"
+      " 33%|███████████▋                       | 1316/3948 [6:12:34<1:27:08,  1.99s/it]\u001b[A/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: None seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PRED seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SUPPORT seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ARG1 seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ARG2 seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ARG0 seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/jiajingchen/miniforge3/lib/python3.10/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "\n",
+      "  1%|▏                                 | 1/153 [6:12:35<943:53:05, 22355.17s/it]\u001b[A\n",
+      "  1%|▍                                  | 2/153 [6:12:36<386:07:20, 9205.57s/it]\u001b[A\n",
+      "  2%|▋                                  | 3/153 [6:12:36<208:26:13, 5002.49s/it]\u001b[A\n",
+      "  3%|▉                                  | 4/153 [6:12:37<125:19:15, 3027.89s/it]\u001b[A\n",
+      "  3%|█▏                                  | 5/153 [6:12:38<79:36:14, 1936.31s/it]\u001b[A\n",
+      "  4%|█▍                                  | 6/153 [6:12:39<52:11:42, 1278.25s/it]\u001b[A\n",
+      "  5%|█▋                                   | 7/153 [6:12:40<34:54:12, 860.63s/it]\u001b[A\n",
+      "  5%|█▉                                   | 8/153 [6:12:41<23:38:22, 586.91s/it]\u001b[A\n",
+      "  6%|██▏                                  | 9/153 [6:12:41<16:08:52, 403.70s/it]\u001b[A\n",
+      "  7%|██▎                                 | 10/153 [6:12:42<11:05:44, 279.33s/it]\u001b[A\n",
+      "  7%|██▋                                  | 11/153 [6:12:43<7:39:22, 194.10s/it]\u001b[A\n",
+      "  8%|██▉                                  | 12/153 [6:12:44<5:17:58, 135.31s/it]\u001b[A\n",
+      "  8%|███▏                                  | 13/153 [6:12:45<3:40:40, 94.57s/it]\u001b[A\n",
+      "  9%|███▍                                  | 14/153 [6:12:46<2:33:30, 66.26s/it]\u001b[A\n",
+      " 10%|███▋                                  | 15/153 [6:12:46<1:47:02, 46.54s/it]\u001b[A\n",
+      " 10%|███▉                                  | 16/153 [6:12:47<1:14:51, 32.78s/it]\u001b[A\n",
+      " 11%|████▍                                   | 17/153 [6:12:48<52:32, 23.18s/it]\u001b[A\n",
+      " 12%|████▋                                   | 18/153 [6:12:49<37:02, 16.47s/it]\u001b[A\n",
+      " 12%|████▉                                   | 19/153 [6:12:50<26:17, 11.77s/it]\u001b[A\n",
+      " 13%|█████▏                                  | 20/153 [6:12:51<18:49,  8.49s/it]\u001b[A\n",
+      " 14%|█████▍                                  | 21/153 [6:12:51<13:37,  6.19s/it]\u001b[A\n",
+      " 14%|█████▊                                  | 22/153 [6:12:52<10:00,  4.58s/it]\u001b[A\n",
+      " 15%|██████                                  | 23/153 [6:12:53<07:31,  3.47s/it]\u001b[A\n",
+      " 16%|██████▎                                 | 24/153 [6:12:54<05:49,  2.71s/it]\u001b[A\n",
+      " 16%|██████▌                                 | 25/153 [6:12:55<04:38,  2.17s/it]\u001b[A\n",
+      " 17%|██████▊                                 | 26/153 [6:12:56<03:46,  1.78s/it]\u001b[A\n",
+      " 18%|███████                                 | 27/153 [6:12:57<03:09,  1.50s/it]\u001b[A\n",
+      " 18%|███████▎                                | 28/153 [6:12:58<02:43,  1.31s/it]\u001b[A\n",
+      " 19%|███████▌                                | 29/153 [6:12:58<02:24,  1.17s/it]\u001b[A\n",
+      " 20%|███████▊                                | 30/153 [6:12:59<02:12,  1.07s/it]\u001b[A\n",
+      " 20%|████████                                | 31/153 [6:13:00<02:02,  1.01s/it]\u001b[A\n",
+      " 21%|████████▎                               | 32/153 [6:13:01<01:56,  1.04it/s]\u001b[A\n",
+      " 22%|████████▋                               | 33/153 [6:13:02<01:51,  1.08it/s]\u001b[A\n",
+      " 22%|████████▉                               | 34/153 [6:13:03<01:48,  1.10it/s]\u001b[A\n",
+      " 23%|█████████▏                              | 35/153 [6:13:04<01:44,  1.13it/s]\u001b[A\n",
+      " 24%|█████████▍                              | 36/153 [6:13:04<01:42,  1.14it/s]\u001b[A\n",
+      " 24%|█████████▋                              | 37/153 [6:13:05<01:40,  1.15it/s]\u001b[A\n",
+      " 25%|█████████▉                              | 38/153 [6:13:06<01:39,  1.15it/s]\u001b[A\n",
+      " 25%|██████████▏                             | 39/153 [6:13:07<01:38,  1.16it/s]\u001b[A\n",
+      " 26%|██████████▍                             | 40/153 [6:13:08<01:37,  1.16it/s]\u001b[A\n",
+      " 27%|██████████▋                             | 41/153 [6:13:09<01:36,  1.17it/s]\u001b[A\n",
+      " 27%|██████████▉                             | 42/153 [6:13:10<01:34,  1.17it/s]\u001b[A\n",
+      " 28%|███████████▏                            | 43/153 [6:13:10<01:33,  1.17it/s]\u001b[A\n",
+      " 29%|███████████▌                            | 44/153 [6:13:11<01:32,  1.18it/s]\u001b[A\n",
+      " 29%|███████████▊                            | 45/153 [6:13:12<01:31,  1.18it/s]\u001b[A\n",
+      " 30%|████████████                            | 46/153 [6:13:13<01:30,  1.18it/s]\u001b[A\n",
+      " 31%|████████████▎                           | 47/153 [6:13:14<01:29,  1.19it/s]\u001b[A\n",
+      " 31%|████████████▌                           | 48/153 [6:13:15<01:27,  1.20it/s]\u001b[A\n",
+      " 32%|████████████▊                           | 49/153 [6:13:15<01:26,  1.21it/s]\u001b[A\n",
+      " 33%|█████████████                           | 50/153 [6:13:16<01:25,  1.21it/s]\u001b[A"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "shape '[64, -1]' is invalid for input of size 1680",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5d/l9sqzgw56mv0n0wg3kfxh0840000gn/T/ipykernel_12483/820149666.py\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mtrue_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabel_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"labels\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m         \u001b[0mreshaped_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mBatchSize\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m         true_predictions = [\n\u001b[1;32m     52\u001b[0m             \u001b[0;34m[\u001b[0m\u001b[0mlabel_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shape '[64, -1]' is invalid for input of size 1680"
      ]
     }
    ],
@@ -399,16 +474,20 @@
     "\n",
     "        true_labels = [[label_names[l] for l in label if l != -100] for label in batch[\"labels\"]]\n",
     "        \n",
-    "        reshaped_predictions = torch.reshape(predictions, (BatchSize,-1))\n",
-    "        true_predictions = [\n",
-    "            [label_names[p] for (p, l) in zip(prediction, label) if l != -100]\n",
-    "            for prediction, label in zip(reshaped_predictions, batch[\"labels\"])\n",
-    "        ]\n",
-    "        \n",
-    "        all_metrics = metric.compute(predictions=true_predictions, references=true_labels)\n",
-    "        metric.add_batch(predictions=true_predictions, references=true_labels)\n",
-    "        progress_bar_eval.update(1)\n",
-    "        f1_now.append(all_metrics[\"overall_f1\"])\n",
+    "        try:\n",
+    "            reshaped_predictions = torch.reshape(predictions, (BatchSize,-1))\n",
+    "            true_predictions = [\n",
+    "                [label_names[p] for (p, l) in zip(prediction, label) if l != -100]\n",
+    "                for prediction, label in zip(reshaped_predictions, batch[\"labels\"])\n",
+    "            ]\n",
+    "\n",
+    "            all_metrics = metric.compute(predictions=true_predictions, references=true_labels)\n",
+    "            metric.add_batch(predictions=true_predictions, references=true_labels)\n",
+    "            progress_bar_eval.update(1)\n",
+    "            f1_now.append(all_metrics[\"overall_f1\"])\n",
+    "        except:\n",
+    "            print(\"***** exception ***** \",predictions)\n",
+    "            f1_now.append(0)\n",
     "        \n",
     "    if np.mean(f1_now) > f1_best or not best_net:\n",
     "        torch.save(model_cc.state_dict(), 'sstcls_best.dat')\n",
@@ -443,19 +522,27 @@
     "\n",
     "        true_labels = [[label_names[l] for l in label if l != -100] for label in batch[\"labels\"]]\n",
     "        \n",
-    "        reshaped_predictions = torch.reshape(predictions, (BatchSize,-1))\n",
-    "        true_predictions = [\n",
-    "            [label_names[p] for (p, l) in zip(prediction, label) if l != -100]\n",
-    "            for prediction, label in zip(reshaped_predictions, batch[\"labels\"])\n",
-    "        ]\n",
+    "        try:\n",
+    "            reshaped_predictions = torch.reshape(predictions, (BatchSize,-1))\n",
+    "            true_predictions = [\n",
+    "                [label_names[p] for (p, l) in zip(prediction, label) if l != -100]\n",
+    "                for prediction, label in zip(reshaped_predictions, batch[\"labels\"])\n",
+    "            ]\n",
+    "\n",
+    "            all_metrics = metric.compute(predictions=true_predictions, references=true_labels)\n",
+    "            metric.add_batch(predictions=true_predictions, references=true_labels)\n",
+    "            progress_bar_eval.update(1)\n",
+    "            f1_now.append(all_metrics[\"overall_f1\"])\n",
+    "            precision_now.append(all_metrics[\"overall_precision\"])\n",
+    "            recall_now.append(all_metrics[\"overall_recall\"])\n",
+    "            accuracy_now.append(all_metrics[\"overall_accuracy\"])\n",
     "        \n",
-    "        all_metrics = metric.compute(predictions=true_predictions, references=true_labels)\n",
-    "        metric.add_batch(predictions=true_predictions, references=true_labels)\n",
-    "        progress_bar_eval.update(1)\n",
-    "        f1_now.append(all_metrics[\"overall_f1\"])\n",
-    "        precision_now.append(all_metrics[\"overall_precision\"])\n",
-    "        recall_now.append(all_metrics[\"overall_recall\"])\n",
-    "        accuracy_now.append(all_metrics[\"overall_accuracy\"])\n",
+    "        except:\n",
+    "            print(\"***** exception ***** \",predictions)\n",
+    "            f1_now.append(0)\n",
+    "            precision_now.append(0)\n",
+    "            recall_now.append(0)\n",
+    "            accuracy_now.append(0)\n",
     "\n",
     "\n",
     "    return np.mean(f1_now), np.mean(precision_now), np.mean(recall_now), np.mean(accuracy_now),"
